2004-07-01  Bastien Nocera  <hadess@hadess.net>

	* help/es/.cvsignore: are we in spring?

2004-07-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* help/es/totem-es.omf: re-encode the file in UTF-8 (Closes: #145071)

2004-06-30  Colin Walters  <walters@verbum.org>

	* src/totem-pl-parser.h (enum TotemPlParserResult): New.

	* src/totem-pl-parser.c (totem_pl_parser_parse_internal): New
	function, busted out from totem_pl_parser_parse.  Also return
	TotemPlParserResult instead of a boolean, and check the
	recurse level to be sure we're not going too recursive.
	(totem_pl_parser_parse): Add new fallabck option, that says
	whether or not to try just adding the url.
	(totem_pl_parser_add_url_from_data): Delete; unified with
	totem_pl_parser_parse_internal.

	* src/totem-pl-parser.c: Change a bunch of internal functions
	to call totem_pl_parser_parse_internal.

2004-06-30  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/list_v4l.c: (list_v4l), (main): moved from libbacon

2004-06-30  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/cd-drive.[ch]:
	* src/bacon-cd-selection.[ch]: update from nautilus-cd-burner
	* src/bacon-v4l-selection.[ch]: use the GtkComboBox in place of 
	GtkOptionMenu

2004-06-28  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd

2004-06-28  Bastien Nocera  <hadess@hadess.net>

	* README: upd TODO
	* src/totem.c: (totem_time_within_seconds),
	(totem_action_previous): implement Iain's CD player like idea
	(only go to the previous track if we're at the beginning of the track,
	 otherwise seek back to the start)

2004-06-27  Julien MOUTTE  <julien@moutte.net>

	* configure.in: Fix build.

2004-06-22  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-06-22  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init),
	(bacon_video_widget_signal_idler):
	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),